--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <script src="https://twitter.com/thomAufresne"></script>
     <title>React App</title>
   </head>
-  <body>
+  <body style="height: 100%;width:100%;">
 
     <div id="root"></div>
 
